2004-06-08  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/Makefile.am, src/Libgendersllnl/Makefile.am,
	src/Gendersllnl/Makefile.am, compat/Makefile.am: Minor fixes for
	distcheck.
	
2004-05-19  Albert Chu  <chu11@llnl.gov>

	* Makefile.am compat/Makefile.am, man/Makefile.am,
	man/dist/Makefile.am, dist/Makefile.am,
	src/libgendersllnl/Makefile.am, src/Libgendersllnl/Makefile.am,
	src/Gendersllnl/Makefile.am: Fixed dist issues.
	
	* src/libgendersllnl/Makefile.am: Cleanup.
	
	* src/libgendersllnl/gendersllnl.c (genders_get_cluster): Fix
	compiler warning.
	
2004-04-30  Albert Chu  <chu11@llnl.gov>

	* dist/dist_all: Fix bug in which -v option should be used with
	pdsh.

	* Tagged gendersllnl-1-4-1

2004-04-27  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Use %configure macro.

	* Localize all non-genderllnl library symbols.
	
2004-03-10  Albert Chu  <chu11@llnl.gov>

	* dist/dist2 (find_attrs_in_file, cat_file, getnodes,
	post_process_attrs): Added support for attributes and values with
	hyphens ('-') or periods ('.').
	
2004-03-09  Albert Chu  <chu11@llnl.gov>

	* config/ac_debug.m4: New file.

	* configure.ac: Added --enable-debug option.

2004-03-08  Albert Chu  <chu11@llnl.gov>

	* dist/dist_all: Use -A option in pdsh instead of -a.

	* gendersllnl.spec.in: Added pdsh dependency on newest pdsh release.
	
2004-02-17  Albert Chu  <chu11@llnl.gov>

	* dist/inst.c (main): Fixed several bugs found by Py Watson.  Use
	strtoul() instead of atoi with 'o' and 'g' options.  Redirect to
	/dev/null on 'c' and 'C' options.
	
2004-02-12  Albert Chu  <chu11@llnl.gov>

	* dist/dist2: Support equal sign for attr=val in distfiles.
	Remove old format for attr=val.

	* man/dist/dist2.1: Updated for changes.

	* tagged gendersllnl-1-3-1
	
2004-02-11  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/Makefile.am: Compile with _REENTRANT.

	* tagged gendersllnl-1-2-1
	
2004-02-10  Albert Chu  <chu11@llnl.gov>
