@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.7 2004-06-08 16:16:36 achu Exp $
+## $Id: Makefile.am,v 1.8 2004-06-21 16:15:59 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -13,7 +13,14 @@ all: Makefile.pm
 	$(MAKE) -f Makefile.pm
 
 Makefile.pm: Makefile.PL
-	$(PERL) $(srcdir)/Makefile.PL PREFIX=$(PERL_INSTALL_PREFIX) MAKEFILE=Makefile.pm FIRST_MAKEFILE=\Makefile.pm
+# Hacks to make distcheck work
+	if ! test -a Makefile.PL; then \
+		cp $(srcdir)/Makefile.PL .; \
+	fi
+	if ! test -a Hostlist.pm; then \
+		cp $(srcdir)/Hostlist.pm .; \
+	fi
+	$(PERL) Makefile.PL PREFIX=$(PERL_INSTALL_PREFIX) MAKEFILE=Makefile.pm FIRST_MAKEFILE=\Makefile.pm
 
 install: Makefile.pm
 	$(MAKE) -f Makefile.pm pure_install
@@ -25,7 +32,9 @@ install-data-local:
 	$(MAKE) -f Makefile.pm pure_install
 
 clean:
-	if test -a Makefile.pm; then $(MAKE) -f Makefile.pm clean; fi
+	if test -a Makefile.pm; then \
+		$(MAKE) -f Makefile.pm clean; \
+	fi
 	rm -f Makefile.pm
 	rm -f Makefile.pm.old
 
